--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 <head>
 <title>Training</title>
 <body>
+<li> <a href="Home.html">Welcome Home</li>
+<li> <a href="Help.html">Need Help</li>
 </body>
 </html>
