--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 <title>Training</title>
 <body>
-<li> <a href="Home.html">Welcome Home</li>
-<li> <a href="Help.html">Need Help</li>
+<ul>
+<li> <a href="Home.html">Welcome Home</a></li>
+<li> <a href="Help.html">Need Help</a></li>
+</ul>
 </body>
 </html>
