--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 <title>Training</title>
-<body>
+</head>
+  <p>Training</p>
+  <body>
 <ul>
-<li> <a href="Home.html">Welcome Home</a></li>
-<li> <a href="Help.html">Need Help</a></li>
+<li><a href="Home.html">Welcome Home</a></li>
+<li><a href="Help.html">Need Help</a></li>
 </ul>
 </body>
 </html>
