--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Training</title>
+<title>Index</title>
 </head>
-  <p>Training</p>
   <body>
+    <p>Index</p>
 <ul>
-<li><a href="Home.html">Welcome Home</a></li>
-<li><a href="Help.html">Need Help</a></li>
+<li><a href="home.html">Home</a></li>
+<li><a href="help.html">Help</a></li>
 </ul>
 </body>
 </html>
